# Multiagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.hehe
docs/: architecture.md
scripts/: benchmark.py  benchmark_queries.json  run_dev.sh  setup.sh
src/: main.py
src/agents/: base.py  coordinator.py
src/agents/specialized/: __init__.py  creative_agent.py  reasoning_agent.py  research_agent.py
src/api/: __init__.py  dependencies.py  middleware.py
src/api/routes/: __init__.py  agents.py  audio.py  rag.py  vision.py
src/audio/: __init__.py  speech_to_text.py  text_to_speech.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  schemas.py
src/crawling/scrapers/: __init__.py  base.py
src/llm/: utils.py
src/llm/providers/: __init__.py  deepseek.py  gemini.py  openai.py
src/rag/: __init__.py  vectorstores.py
src/rag/embeddings/: __init__.py  vietnamese.py
src/rag/retrieval/: __init__.py  hybrid_search.py
src/rag/vectorstores/: __init__.py
src/utils/: logging.py
src/vision/: __init__.py  ocr.py
src/web/: __init__.py  search.py
tests/: __init__.py  conftest.py
tests/agents/: test_coordinator.py
tests/rag/: test_hybrid_search.py
ui/: README.md  package.json
ui/src/: App.js  index.js
ui/src/components/chat/: ChatInterface.js
